# glasflow

./: .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: integration-tests.yml  lint.yml  publish-to-pypi.yml  tests.yml  tests_nflows_fork.yml
examples/: conditional_example.ipynb  conformal_test.py  moons_nvp_example.ipynb
examples/.github/workflows/: integration-tests.yml  tests.yml
src/glasflow/: __init__.py  utils.py
src/glasflow/distributions/: __init__.py  resampled.py  uniform.py
src/glasflow/flows/: __init__.py  autoregressive.py  base.py  conformal.py  coupling.py  injective.py  nsf.py  realnvp.py
src/glasflow/nets/: __init__.py  mlp.py
src/glasflow/transforms/: __init__.py  conformal.py  coupling.py  utils.py
tests/: conftest.py  test_import.py  test_integration.py  test_utils.py
tests/test_distributions/: test_resampled.py  test_uniform.py
tests/test_flows/: test_autoregressive.py  test_coupling.py  test_nsf.py  test_realnvp.py
tests/test_nets/: test_mlp.py
tests/test_transforms/: test_coupling_transforms.py  test_utils.py
