[build-system]
requires = ["setuptools>=64.0.3", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line-length = 79
target-version = ["py36", "py37", "py38", "py39"]
extend-exclude = "submodules"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
