[metadata]
name = glasflow
description = 
long_description = file: README.md
long_description_content_type = text/markdown
author = 
author_email = 
url = https://github.com/igr-ml/glasflow
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = normalising flows, machine learning

[options]
package_dir=
    =src
packages = find:
python requires = >=3.6
install_requires =
    nflows
test_suite = tests
tests_require =
    pytest
    pytest-cov
    pytest-integration

[options.packages.find]
where=src

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-integration