[metadata]
name = glasflow
description = 
long_description = file: README.md
long_description_content_type = text/markdown
author = IGR-ML
url = https://github.com/igr-ml/glasflow
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = normalising flows, machine learning

[options]
package_dir = 
    glasflow = src/glasflow
    glasflow.nflows = submodules/nflows/nflows
python requires = >=3.6
install_requires = 
    numpy
    torch
test_suite = tests
tests_require =
    pytest
    pytest-cov
    pytest-integration

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    pre-commit
    pytest
    pytest-cov
    pytest-integration

[flake8]
exclude = submodules, build
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
