[metadata]
name = glasflow
description = Normalising flows using nflows
long_description = file: README.md
long_description_content_type = text/markdown
author = IGR-ML
author_email = m.williams.4@research.gla.ac.uk
url = https://github.com/igr-ml/glasflow
license = MIT
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = normalising flows, machine learning

[options]
package_dir = 
    glasflow = src/glasflow
    glasflow.nflows = submodules/nflows/nflows
python requires = >=3.7
install_requires =
    numpy
    torch

[options.extras_require]
nflows = 
    nflows
nflows-test = 
    pytest
    pytest-rerunfailures
    torchtestcase
    UMNN
dev =
    black[jupyter]
    pre-commit
    pytest
    pytest-cov
    pytest-integration
    pytest-rerunfailures

[flake8]
exclude = submodules, build
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
